--- a/deployments/deployment_peer_org1.yaml
+++ b/deployments/deployment_peer_org1.yaml
@@ -16,12 +16,19 @@ spec:
         peer-id: peer0
     spec:
       containers:
-        - name: couchdb
-          images: hyperledger/fabric-couchdb:0.4.14
+        - name: org1-peer0-couchdb
+          image: hyperledger/fabric-couchdb:0.4.14
           ports:
             - containerPort: 5984
+          resources:
+            requests:
+              memory: 128M
+              cpu: "0.05"
+            limits:
+              memory: 256M
+              cpu: "0.1"
 
-        - name: org1-peer
+        - name: org1-peer0
           image: hyperledger/fabric-peer:1.4.0
           env:
             - name: CORE_LEDGER_STATE_STATEDATABASE
@@ -36,21 +43,27 @@ spec:
               value: "Org1MSP"
             - name: CORE_PEER_ID
               value: "peer0.org1.example.com"
+            - name: CORE_PEER_TLS_SERVERHOSTOVERRIDE
+              value: "peer0.org1.example.com"
             - name: CORE_PEER_MSPCONFIGPATH
               value: "/etc/hyperledger/msp/peer/"
+            - name: CORE_PEER_MSPCONFIGPATH
+              value: /etc/hyperledger/fabric/msp
             - name: CORE_PEER_ADDRESS
               value: "peer0.org1.example.com:7051"
+            - name: CORE_PEER_ADDRESSAUTODETECT
+              value: "true"
           ports:
             - containerPort: 7051
             - containerPort: 7053
           command: ["peer"]
           args: ["node", "start"]
           volumeMounts:
-            - mountPath: /etc/hyperledger/msp/peer
-              name: certificate
+            - mountPath: /etc/hyperledger/msp
+              name: cert-pv
               subPath: peerOrganizations/org1.example.com/peers/peer0.org1.example.com/msp
             - mountPath: /etc/hyperledger/msp/users
-              name: certificate
+              name: cert-pv
               subPath: peerOrganizations/org1.example.com/users
             - mountPath: /var/run
               name: run
@@ -62,7 +75,7 @@ spec:
               memory: 512M
               cpu: "0.5"
       volumes:
-        - name: certificate
+        - name: cert-pv
           persistentVolumeClaim:
             claimName: cert-pvc
         - name: run
@@ -73,22 +86,22 @@ apiVersion: v1
 kind: Service
 metadata:
   namespace: default
-  name: peer-org1
+  name: org1-peer
 spec:
   selector:
     app: hyperledger
     role: peer
     org: org1
     peer-id: peer0
-type: NodePort
-ports:
-  - name: peer-endpoint
-    protocol: TCP
-    port: 7051
-    targetPort: 7051
-    nodePort: 30110
-  - name: listener-endpoint
-    protocol: TCP
-    port: 7053
-    targetPort: 7053
-    nodePort: 30111
+  type: NodePort
+  ports:
+    - name: peer-endpoint
+      protocol: TCP
+      port: 7051
+      targetPort: 7051
+      nodePort: 30110
+    - name: listener-endpoint
+      protocol: TCP
+      port: 7053
+      targetPort: 7053
+      nodePort: 30111
